test/type_errors/cases/ppx_eta_trace_non_effect_body.ml
(* Attribute twin of the non-effect body case. *)
module Eta =
  struct
    module Effect =
      struct
        type ('a, 'err) t
        external fn :
          string * int * int * int -> string -> ('a, 'err) t -> ('a, 'err) t
          = "%identity"
      end
  end
let f () = 1 [@@eta.trace]
